--- a/html入门/index.html
+++ b/html入门/index.html
@@ -22,7 +22,7 @@
 
 <div>这是一个div元素里的内容</div>
     <p>这是一个p元素里的内容</p>
-<span>这是一个span元素里的内容</span><
+<span>这是一个span元素里的内容</span><span>这是另一个span元素里的内容</span>
 <ul>
     <li>123213</li>
     <li>rret</li>
@@ -35,5 +35,16 @@
     <li>aa</li>
     <li>bb</li>
 </ol>
+行内元素:display属性默认为inline的元素 img,span,label,input,button,a<br>
+内联对象inline给它设置属性height和width是没有用的，致使它变宽变大的,它实际宽度为：内部元素的宽+2*(padding+border+margin)。
+inline对象不单独占一行。
+块元素:display属性默认为block的元素
 </body>
+The difference between HTML and CSS
+Getting acquainted with HTML elements, tags, and attributes
+Setting up the structure of your first web page
+Getting acquainted with CSS selectors, properties, and values
+Working with CSS selectors
+Referencing CSS in your HTML
+The value of CSS resets
 </html>
