--- a/3-html入门/index.html
+++ b/3-html入门/index.html
@@ -17,8 +17,13 @@
 
 
 <div>这是一个div元素里的内容</div>
-<p>这是一个p元素里的内容</p>
+<p>这是<span style="background-color: red">嘿嘿这里插入了一个span元素</span>一个p元素里的内容</p>
 <span>这是一个span元素里的内容</span><span>这是另一个span元素里的内容</span>
+<br>
+<br>
+<br>
+<br>
+表格：<br>
 <table>
     <thead>
     <tr>
@@ -45,6 +50,8 @@
     </tr>
     </tfoot>
 </table>
+
+列表：<br>
 <ul>
     <li>123213</li>
     <li>rret</li>
@@ -58,7 +65,7 @@
     <li>bb</li>
 </ol>
 
-
+表单：<br>
 <form>
     name的属性值，value的属性值分别表示这个表单发送请求时的字段名称和值<br>
     姓名:<br>
@@ -120,14 +127,36 @@
 
 
 <button><b>按钮字体加粗，甚至还能嵌套图片</b></button>
-<a href="#name">name</a>
+button元素一般单独使用，如果放在form元素里，浏览器会自动认为它是一个提交按钮
+<a href="#name">使用name属性可以当锚点，使用href属性当作超链接进行跳转或跳跃到锚点</a>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<a name="name">hi！我在这儿！！</a>
 <img src="">
 </body>
-The difference between HTML and CSS
-Getting acquainted with HTML elements, tags, and attributes
-Setting up the structure of your first web page
-Getting acquainted with CSS selectors, properties, and values
-Working with CSS selectors
-Referencing CSS in your HTML
-The value of CSS resets
 </html>
