--- a/4-css入门/index.html
+++ b/4-css入门/index.html
@@ -31,11 +31,11 @@
     </div>
 </div>
 <div id="test3">我要BFC!</div>
-<div id="test4">我要BFC!</div>
+<div id="test4">我要BFC!test5</div>
 
 <div style="float: right;background-color: green">浮动了浮动了</div><div style="clear: right;background-color: red">右侧不要有浮动</div>
 
-commit分开解决后 test4
+commit分开解决后 test5
 
 </body>
 </html>
