--- a/4-css入门/index.html
+++ b/4-css入门/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="example.css">
+    <link rel="stylesheet" href="tutortial.css">
 </head>
 <body>
 <h1>教程示例</h1>
@@ -33,13 +34,22 @@
 <div id="test3">我要BFC!</div>
 <div id="test4">我要BFC!test5</div>
 
-<div style="float: right;background-color: green">浮动了浮动了</div><div style="clear: right;background-color: red">右侧不要有浮动</div>
+<div style="float: right;background-color: green">浮动了浮动了</div>
+<div style="clear: right;background-color: red">右侧不要有浮动</div>
 
 
-commit分开解决后 test5
+<ul class="list">
+    <li>首页</li>
+    <li>关于</li>
+    <li>影视</li>
+    <li>游戏</li>
+</ul>
 
-dsadsadsad
-1323
-
+<div style="line-height: 240px;border: 1px solid black;font-size:180px;"><span
+        style="background-color: pink;font-size: 180px;line-height: 180px;">x</span><span
+            style="background-color: lightblue;font-size: 180px;line-height: 180px;vertical-align: middle">x</span><span
+        style="font-size: 100px;background-color: green;line-height:100px;vertical-align: top;">x</span><img src="dl2.jpg"
+                                                                                           style="background-color: red;vertical-align: top"><div style="display: inline-block;background-color: red;height: 170px;width: 100px;vertical-align: top"></div>
+</div>
 </body>
 </html>
