--- a/4-css入门/index.html
+++ b/4-css入门/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
 <h1>教程示例</h1>
-<div id="test1">今天天气不错，吃了吗
-    <div id="test2"></div>
+<h3>width,height,margin,padding取百分比</h3>
+<div id="test1">今天天气不错，<span>插入了一段行内元素</span>吃了吗
+    <div id="test2">一个子元素，width是百分比，height是百分比（会生效吗？）</div>
 </div>
-
-
+结论：height设置百分比只有在父元素height不会auto时才有用
+<h3>position是怎么定位的</h3>
 <div style=" border:1px solid Red; padding:10px; width: 340px; height: 400px">
     红色：太公
     <div style="border:1px solid Green; padding:10px; width: 320px; height: 360px">
@@ -22,20 +23,30 @@
             <div style="width: 100px; height: 100px;background-color: red">
                 div1
             </div>
-            <div style="width: 100px; height: 100px;background-color: green; position:relative;top: 10px">
+            <div style="width: 100px; height: 100px;background-color: green; position:relative;">
                 div2
             </div>
-            <div style="width: 100px; height: 100px;background-color: black; position:relative;bottom: 20px;">
+            <div style="width: 100px; height: 100px;background-color: pink; position:relative;">
                 div3
             </div>
         </div>
     </div>
 </div>
-<div id="test3">我要BFC!</div>
-<div id="test4">我要BFC!test5</div>
+<h3>浮动</h3>
+<span style="width:900px;background-color: darkorange">我是一个普通的span元素，我本来在左边的，谁叫我是行内元素，我被挤开了</span><div class="float">我是向左浮动的盒子，脱离文档流，飘啊飘，直到遇到包含我的盒子边界，或者另一个浮动元素我才会停下来。我会把一切行内元素挤开</div>
+<br>
+<br>
+<br>
+<div class="float second">我也是向左浮动的盒子，脱离文档流，飘啊飘，直到遇到包含我的盒子边界，或者另一个浮动元素我才会停下来.我会把行内元素挤开</div><div id="floattest2">block元素来了，前面有什么？什么都没啊！</div>
+<br>
+<h5>用浮动元素的坑：如果一排里有个浮动的兄弟比别人高，等到换行的时候，文档流不知道还有个高个兄弟会挡道！（去掉上面的br标签试试）</h5>
+<div id="test3">我没触发BFC，我包含了浮动元素，浮动元素认识我，他会在我内边停下来，但我不认识他</div>
+<div id="test4">我也是一个inline-block元素，我要BFC!</div>
 
-<div style="float: right;background-color: green">浮动了浮动了</div>
-<div style="clear: right;background-color: red">右侧不要有浮动</div>
+<br>
+<br><br><br><br>
+<div style="float: right;background-color: green">我要向右浮动了</div>
+<div style="clear: right;background-color: red">我有洁癖，解析到我时我会看看发现前面的元素有没有会浮动到我右边的异类，有的话我惹不起但躲得起，我换行！</div>
 
 
 <ul class="list">
