--- a/3-html入门/index.html
+++ b/3-html入门/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        td {
-            border: solid black 1px
-        }
-
+#test1 td{
+    border: 1px solid black;
+}
         table {
             border-collapse: collapse;
+        }
+        #test2 td{
+            height: 45px;
+            padding-right: 20px;
+        }
+        #test2 img{
+            width: 30px;
+            height: 30px;
+            vertical-align: middle;
         }
     </style>
 </head>
@@ -24,7 +32,7 @@
 <br>
 <br>
 表格：<br>
-<table>
+<table id="test1">
     <thead>
     <tr>
         <td>姓名</td>
