--- a/4-css选择器/index.html
+++ b/4-css选择器/index.html
@@ -5,12 +5,17 @@
     <title>Title</title>
     <link rel="stylesheet" href="example.css">
     <link rel="stylesheet" href="tutortial.css">
+    <style>
+        h1{
+            color:green;
+        }
+    </style>
 </head>
 <body>
 <h1>教程示例</h1>
 <h3>width,height,margin,padding取百分比</h3>
-<div id="test1">今天天气不错，<span>插入了一段行内元素</span>吃了吗
-    <div id="test2">一个子元素，width是百分比，height是百分比（会生效吗？）</div>
+<div id="test1" name="t">今天天气不错，<span>插入了一段行内元素</span>吃了吗
+    <div id="test2" class="b">一个子元素，width是百分比，height是百分比（会生效吗？）</div>
 </div>
 结论：height设置百分比只有在父元素height不会auto时才有用
 <h3>position是怎么定位的</h3>
