--- a/5-盒模型与定位/2-padding.html
+++ b/5-盒模型与定位/2-padding.html
@@ -4,18 +4,26 @@
     <meta charset="UTF-8">
     <title>padding</title>
     <style>
-        div {
-            /*padding: 10px;*/
+        .test1{
+            width: 600px;
+            height: 300px;
+        }
+        .test2 {
             width: 100px;
             height: 200px;
+            /*简写，px，百分比*/
             padding-top: 10px;
             padding-right: 10px;
             padding-bottom: 10px;
             padding-left: 10px;
+            padding: 10%;
+            background-color: lightblue;
         }
     </style>
 </head>
 <body>
-<div></div>
+<div class="test1">
+    <div class="test2"></div>
+</div>
 </body>
 </html>
