--- a/5-盒模型与定位/3-border.html
+++ b/5-盒模型与定位/3-border.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>border</title>
+    <style>
+        div{
+            width: 100px;
+            height: 100px;
+            /*只有px*/
+            border: 10px solid black;
+            border-width: 10px;
+            border-style: solid;
+            border-color: black;
+            border-radius: 60px;
+            background-color: lightblue;
+        }
+    </style>
 </head>
 <body>
-
+<div></div>
 </body>
 </html>
