--- a/5-盒模型与定位/1-width,height.html
+++ b/5-盒模型与定位/1-width,height.html
@@ -16,14 +16,12 @@
             /*无效*/
             width: 50px;
             height: 50px;
-            /*inline元素的高度由line-height决定*/
-            line-height: 50px;
             background-color: pink;
         }
     </style>
 </head>
 <body>
 <div>block元素</div>
-<span>inline元素 line-height:50px</span>
+<span>inline元素</span>
 </body>
 </html>
