--- a/6-常见的css属性与less入门/2-background-image.html
+++ b/6-常见的css属性与less入门/2-background-image.html
@@ -8,10 +8,16 @@
     div{
         width: 600px;
         height: 400px;
+        padding: 20px;
+        border: 20px solid transparent;
         margin: 20px auto;
-        background-image: linear-gradient(to right, rgba(30, 75, 115, 1), rgba(255, 255, 255, 0));
-        background-size: 50% 50%;
-        /*background-image: url("dl.png");*/
+        /*background-image: linear-gradient(to right, rgba(30, 75, 115, 1), rgba(255, 255, 255, 0));*/
+        /*background-size: 50% 50%;*/
+        /*background-position: 40px 40px;*/
+        background-origin: border-box;
+        background-clip: border-box;
+        background-repeat: no-repeat;
+        background-image: url("dl.png");
     }
 </style>
 <body>
