--- a/5-盒模型与定位/7-float定义.html
+++ b/5-盒模型与定位/7-float定义.html
@@ -15,10 +15,13 @@
             background-color: green;
             height: 30px;
         }
+        span{
+            background-color: pink;
+        }
     </style>
 </head>
 <body>
-<span style="background-color: pink">我是一个普通的span元素，我本来在左边的，谁叫我是行内元素，我被挤开了</span>
+<span>我是一个普通的span元素，我本来在左边的，谁叫我是行内元素，我被挤开了</span>
 <div class="float">我是向左浮动的盒子，脱离文档流，飘啊飘，直到遇到包含我的盒子边界，或者另一个浮动元素我才会停下来。我会把一切行内元素挤开</div>
 <br>
 <br>
