--- a/9-DOM/1-DOM操作.html
+++ b/9-DOM/1-DOM操作.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>DOM操作</title>
     <style>
+        body{
+            text-align: center;
+        }
         ul{
             width: 150px;
             margin: 0 auto;
@@ -17,6 +20,9 @@
             font-family: "Microsoft YaHei";
             font-size: 20px;
         }
+        input{
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
@@ -26,5 +32,6 @@
     <li>water</li>
     <li>juice</li>
 </ul>
+<input type="button" value="点一下">
 </body>
 </html>
