--- a/9-DOM/1-DOM操作.html
+++ b/9-DOM/1-DOM操作.html
@@ -26,11 +26,11 @@
     </style>
 </head>
 <body>
-<ul>
-    <li>coffee</li>
-    <li>milk</li>
-    <li>water</li>
-    <li>juice</li>
+<ul id="list">
+    <li class="drink">coffee</li>
+    <li class="drink">milk</li>
+    <li class="drink">water</li>
+    <li class="drink">juice</li>
 </ul>
 <input type="button" value="点一下">
 </body>
