--- a/page2/index.html
+++ b/page2/index.html
@@ -363,26 +363,17 @@
 
         <dl>
             <dd><img src="static/kecheng_16.jpg"></dd>
-            <dt><h1>上课无区域限制</h1></dt>
-            <dt>不限区域，有电脑即可上课</dt>
-            <dt>课后分享课程视频，随时都可畅快学习</dt>
+            <dt><h1>课程个性化定制</h1></dt>
+            <dt>课程结合实战，全程跟踪</dt>
+            <dt>课时、课后随时提问随时解答</dt>
         </dl>
 
         <dl>
             <dd><img src="static/kecheng_18.jpg"></dd>
             <dt><h1>无水分的学费</h1></dt>
             <dt>费用远低于培训机构</dt>
-            <dt>内容更优质，费用更合理</dt>
+            <dt>全程干货，决不讲任何没用的知识</dt>
         </dl>
-
-
-        <dl>
-            <dd><img src="static/kecheng_19.jpg"></dd>
-            <dt><h1>学习服务天天向上保障</h1></dt>
-            <dt>讲师承诺终身辅导</dt>
-            <dt>天天向上全程保障课程顺利进行</dt>
-        </dl>
-
     </div>
     <!--con-->
 </div>
