--- a/page2/indexM.html
+++ b/page2/indexM.html
@@ -31,7 +31,7 @@
     };
     if( isMobile.any() ) {
     }else{
-        window.location.href="./index.html"
+       // window.location.href="./index.html"
     }
 </script>
     <style type="text/css">
@@ -372,25 +372,25 @@
 
         <dl>
             <dd><img src="static/kecheng_16.jpg"></dd>
-            <dt><h1>上课无区域限制</h1></dt>
-            <dt>不限区域，有电脑即可上课</dt>
-            <dt>课后分享课程视频，随时都可畅快学习</dt>
+            <dt><h1>课程个性化定制</h1></dt>
+            <dt>课程结合实战，全程跟踪</dt>
+            <dt>课时、课后随时提问随时解答</dt>
         </dl>
 
         <dl>
             <dd><img src="static/kecheng_18.jpg"></dd>
             <dt><h1>无水分的学费</h1></dt>
             <dt>费用远低于培训机构</dt>
-            <dt>内容更优质，费用更合理</dt>
+            <dt>全程干货，决不讲任何没用的知识</dt>
         </dl>
-
+<!--
 
         <dl>
             <dd><img src="static/kecheng_19.jpg"></dd>
             <dt><h1>学习服务天天向上保障</h1></dt>
             <dt>讲师承诺终身辅导</dt>
             <dt>天天向上全程保障课程顺利进行</dt>
-        </dl>
+        </dl>-->
 
     </div>
     <!--con-->
@@ -406,9 +406,9 @@
         <!--fadeInUpLeft-->
         <div class="wow fadeInRight fr" data-wow-delay="0s" style="visibility: hidden; animation-delay: 0s; animation-name: none;">
             <ul>
-                <li><h1>讲师简介<strong>阿坤</strong></h1></li>
+                <li><h1>讲师简介<strong>冷火</strong></h1></li>
                 <li><h3>资深前端工程师</h3></li>
-                <li>武汉大学硕士毕业，8年前端开发经验，2007年踏入前端工作</li>
+                <li>武汉大学硕士毕业，8年前端开发经验，2009年踏入前端工作</li>
                 <li>主持参与前端开发项目约百余个</li>
                 <li>2014年加入天天向上培训任联合创始人</li>
                 <li>资深前端开发工程师，主导团队所有前端开发工作</li>
@@ -452,105 +452,69 @@
         <div class="list r1">
 
             <ul>
-                <li><h1>第1章 HTML基础（3个课时）</h1></li>
+                <li><h1>第1章 HTML基础</h1></li>
                 <li>1、HTML语言介绍</li>
                 <li>2、HTML运行的环境</li>
                 <li>3、怎么创建网页</li>
                 <li>4、浏览器的支持</li>
                 <li>5、常用的HTML标签</li>
-                <li>6、dw的使用</li>
             </ul>
 
             <ul>
-                <li><h1>第2章 表格表单与框架（2个课时）</h1></li>
-                <li>1、table表格技术布局页面</li>
-                <li>2、table在div布局中哪些模块更好的使用</li>
-                <li>3、系统后台所用到的frameset框架</li>
-                <li>4、iframe的使用</li>
-                <li>5、Form表单详细讲解</li>
-            </ul>
-
-            <ul>
-                <li><h1>第3章 CSS基础（4个课时）</h1></li>
+                <li><h1>第2章 CSS基础</h1></li>
                 <li>1、CSS盒型基础概念</li>
-                <li>2、CSS选择符的使用</li>
+                <li>2、CSS选择器的使用</li>
                 <li>3、CSS常用属性</li>
-                <li>4、详解CSS定位与DIV布局</li>
+                <li>4、详解CSS文档流、定位与布局</li>
                 <li>5、DIV、CSS实际项目综合练习讲解</li>
-                <li>6、CSS不合理写法演示和常见问题归纳</li>
-                <li>7、CSS的调试以及调试工具使用</li>
-                <li>8、应用实际项目做综合练习</li>
+                <li>6、LESS入门</li>
+                <li>7、应用实际项目做综合练习</li>
             </ul>
 
         </div>
         <!--list-->
         <div class="list r2">
 
-
             <ul>
-                <li><h1>第4章 HTML5（2个课时）</h1></li>
-                <li>1、HTML5介绍</li>
-                <li>2、HTML5语义化标签讲解</li>
-                <li>3、HTML5标签的使用</li>
-                <li>4、HTML5音频以及视频标签的讲解以及应用</li>
-                <li>5、雪碧CSS切法、常见问题归纳和练习</li>
-            </ul>
-
-            <ul>
-                <li><h1>第5章 CSS3（3个课时）</h1></li>
-                <li>1、css3介绍</li>
-                <li>2、css3属性讲解以及应用</li>
-                <li>3、css3过渡以及动画属性详细讲解</li>
-                <li>4、结合html5综合练习</li>
-                <li>5、电商网站切图练习</li>
-            </ul>
-
-            <ul>
-                <li><h1>第6章 JavaScript技术以及Jquery（2个课时）</h1></li>
+                <li><h1>第3章 JavaScript基础</h1></li>
                 <li>1、JavaScript概述介绍</li>
                 <li>2、JavaScript语法</li>
-                <li>3、JavaScript典型案例</li>
-                <li>4、Jquery的概念</li>
-                <li>5、Jquery语法</li>
-                <li>6、JavaScript典型案例</li>
-                <li>7、综合案例练习</li>
+                <li>3、JavaScript数据类型</li>
+                <li>4、使用JavaScript操作DOM</li>
+                <li>5、综合案例练习</li>
             </ul>
-
-
-
-
-
+            <ul>
+                <li><h1>第4章 JavaScript进阶</h1></li>
+                <li>1、深入理解函数与对象</li>
+                <li>2、原型链</li>
+                <li>3、执行上下文与闭包</li>
+                <li>4、事件循环与异步</li>
+            </ul>
         </div>
         <!--list-->
         <div class="list r3">
-
             <ul>
-                <li><h1>第7章 web响应式写法（1个课时）</h1></li>
-                <li>1、响应式的原理</li>
-                <li>2、响应式的前端制作</li>
-                <li>3、响应式的测试</li>
-                <li>4、响应式前端问题归纳与练习</li>
-
+                <li><h1>第5章 新的时代————前端工程化</h1></li>
+                <li>1、初识MVVM模式与VUE</li>
+                <li>2、ES6语法与模块化开发</li>
+                <li>3、Webpack入门与实战</li>
+                <li>4、Vue基本应用</li>
+                <li>5、组件化开发</li>
+                <li>6、前端路由</li>
+                <li>7、开发单页应用</li>
+                <li>8、数据状态管理</li>
             </ul>
 
             <ul>
-                <li><h1>第8章 移动端的写法（1个课时）</h1></li>
-                <li>1、移动端的前端原理</li>
-                <li>2、移动端的前端制作</li>
-                <li>3、如何做好移动端适配</li>
-                <li>4、移动端前端练习</li>
+                <li><h1>第6章 项目架构与优化</h1></li>
+                <li>1、NodeJS入门</li>
+                <li>2、了解http协议</li>
+                <li>3、数据库CRUD操作</li>
+                <li>4、构建完整的web应用</li>
             </ul>
 
             <ul>
-                <li><h1>第9章 综合练习（2个课时）</h1></li>
-                <li>1、制作小型网站</li>
-                <li>2、制作主流网站</li>
-                <li>3、电商购物网站主页</li>
-                <li>4、移动端web app前端制作</li>
-            </ul>
-
-            <ul>
-                <li><h1>第10章 面试培训和简历写法</h1></li>
+                <li><h1>第7章 面试培训和简历写法</h1></li>
                 <li>1、面试常见问题</li>
                 <li>2、简历写法</li>
                 <li>3、职业答疑</li>
@@ -686,7 +650,7 @@
                     </tbody></table>
             </li>
         </ul>-->
-        <p><a href="javascript:void(0)" onclick="_MEIQIA('showPanel')" target="_blank" class="bt">我要报名</a></p>
+        <p><a href="../page/register.html" target="_blank" class="bt">我要报名</a></p>
     </div>
 
 </div>
