修复报名后不居中，主页联系方式换行

--- a/page2/index.html
+++ b/page2/index.html
@@ -603,7 +603,7 @@
     <div class="wow fadeInDown top" data-wow-delay="0s" style="visibility: hidden; animation-delay: 0s; animation-name: none;">
         <h1>与其临渊慕鱼，不如立即加入学习</h1>
         <h3>进步往往就在不经意间，或许就是你的一个决定</h3>
-        <h3> <span class="qq">QQ：3351327275/微信：wx3315327275  (长按复制)</span> 钱老师</h3>
+        <h3> <span class="qq">QQ：3351327275 <br>微信：wx3315327275  <br>(长按复制)</span> 钱老师</h3>
     </div>
     <!--top-->
 
