导师名字换行，经验7年

--- a/page2/index.html
+++ b/page2/index.html
@@ -406,9 +406,10 @@
         <!--fadeInUpLeft-->
         <div class="wow fadeInRight fr" data-wow-delay="0s" style="visibility: hidden; animation-delay: 0s; animation-name: none;">
             <ul>
-                <li><h1>讲师简介<strong>冷火</strong></h1></li>
+                <li><h1>讲师简介</h1></li>
+                <li><h1><strong>冷火</strong></h1></li>
                 <li><h3>资深前端工程师</h3></li>
-                <li>武汉大学硕士毕业，8年前端开发经验，2009年踏入前端工作</li>
+                <li>武汉大学硕士毕业，7年前端开发经验，2010年踏入前端领域</li>
                 <li>主持参与前端开发项目约百余个</li>
                 <li>2014年加入天天向上培训任联合创始人</li>
                 <li>资深前端开发工程师，主导团队所有前端开发工作</li>
@@ -440,7 +441,7 @@
             <li><i></i>寻道有论：学习是学习学习的方法</li>
             <li><i></i>理论学习+实战训练让课程不再枯燥</li>
             <li><i></i>循序渐进的课程设置亲身为你打造</li>
-            <li><i></i>导师以8年切身经验亲身传道授业</li>
+            <li><i></i>导师以7年切身经验亲身传道授业</li>
             <li><i></i>3大阶段带你进入职业前端开发之路</li>
         </ul>
         <img src="static/quxian_03.png">
