--- a/page2/index.html
+++ b/page2/index.html
@@ -413,14 +413,14 @@
                 <li>主持参与前端开发项目约百余个</li>
                 <li>2014年加入天天向上培训任联合创始人</li>
                 <li>资深前端开发工程师，主导团队所有前端开发工作</li>
-                <li>服务客户包括：斗鱼、战旗、哔哩哔哩、银联等…</li>
+                <li>服务客户包括：斗鱼、战旗、哔哩哔哩、银联等</li>
             </ul>
 
             <ul>
                 <li><h1>授课方式</h1></li>
-                <li><b>授课时间：</b>工作日：18:30至23:00 非工作日: 全天</li>
+                <li><b>授课时间：</b>工作日：19:00至23:00 非工作日: 全天</li>
                 <li><b>讲课模式：</b>二选一：1.一对一上门（名额有限） 2.线下精品小班</li>
-                <li><b>学员要求：</b>1.一台PC或笔记本（完成课下作业）。2.如果是一对一上门您需要在讲课时段内提供一个封闭的讲课空间</li>
+                <li><b>学员要求：</b>1.一台PC或笔记本（完成课下作业）。2.如果是上门一对一，您需要在讲课时段内提供一个封闭的讲课空间</li>
                 <li><a href="page/register.html" target="_blank" class="bt">我要报名</a></li>
             </ul>
 
