去掉线上文案

--- a/page2/index.html
+++ b/page2/index.html
@@ -533,7 +533,7 @@
         <div class="wow fadeInLeft fl" data-wow-delay="0s" style="visibility: hidden; animation-delay: 0s; animation-name: none;">
             <ul>
                 <li><h1>天天向上前端特训营</h1></li>
-                <li>学费只有线下1/6，更无其他额外费用</li>
+                <li>学费只有大型机构1/6，更无其他额外费用</li>
                 <li>小班一对一，名师答疑辅导实战学习</li>
                 <li>理论与实战、针对指导一个都不能少</li>
                 <li>真正干货，前端最新趋势，传授企业所需经验</li>
