--- a/page2/index.html
+++ b/page2/index.html
@@ -418,6 +418,7 @@
                 <li><b>授课时间：</b>工作日：19:00至23:00 非工作日: 全天</li>
                 <li><b>讲课模式：</b>二选一：1.一对一上门（名额有限） 2.线下精品小班</li>
                 <li><b>学员要求：</b>1.一台PC或笔记本（完成课下作业）。2.如果是上门一对一，您需要在讲课时段内提供一个封闭的讲课空间</li>
+                <li><b>地点：</b>光谷大道华师传媒学院正对面</li>
                 <li><a href="page/register.html" target="_blank" class="bt">我要报名</a></li>
             </ul>
 
