去掉动画修正微信浏览器重新排版的问题

--- a/page2/index.html
+++ b/page2/index.html
@@ -288,18 +288,12 @@
             text-align: center;
         }
     </style>
-    <link rel="stylesheet" href="static/animate.css">
+   <!-- <link rel="stylesheet" href="static/animate.css">-->
     <script type="text/javascript" src="./font/js/lib/jquery-1.9.0.min.js"></script>
     <!-- <script type="text/javascript" src="static/common.js"></script> -->
-    <script src="static/wow.js"></script>
+    <!--<script src="static/wow.js"></script>-->
     <script>
-        wow = new WOW(
-            {
-                animateClass: 'animated',
-                offset:50
-            }
-        );
-        wow.init();
+
     </script>
     <script>
         /*(function(m, ei, q, i, a, j, s) {
@@ -340,6 +334,7 @@
     <div class="wow fadeInDown top animated" data-wow-delay="0s" style="visibility: visible; animation-delay: 0s; animation-name: fadeInDown;">
         <h1>六大课程优势超越你的期待</h1>
         <h3>天天向上重磅推荐课程带你飞，坚持两个月你将蜕变</h3>
+        <h3>（全国前端开发平均月薪：10852元）</h3>
     </div>
     <!--top-->
 
@@ -399,9 +394,9 @@
 
     <div class="con">
 
-       <!-- <div class="wow fadeInLeft pic" data-wow-delay="0s" style="visibility: hidden; animation-delay: 0s; animation-name: none;"><img src="static/man.png"></div>-->
+       <!-- <div class="wow fadeInLeft pic" data-wow-delay="0s" style="visibility: visible; animation-delay: 0s; animation-name: none;"><img src="static/man.png"></div>-->
         <!--fadeInUpLeft-->
-        <div class="wow fadeInRight fr" data-wow-delay="0s" style="visibility: hidden; animation-delay: 0s; animation-name: none;">
+        <div class="wow fadeInRight fr" data-wow-delay="0s" style="visibility: visible; animation-delay: 0s; animation-name: none;">
             <ul>
                 <li><h1>讲师简介</h1></li>
                 <li><h1><strong>冷火</strong></h1></li>
@@ -432,7 +427,7 @@
 
 
 <div class="quxian or">
-    <div class="top wow fadeInDown" style="visibility: hidden; animation-name: none;">
+    <div class="top wow fadeInDown" style="visibility: visible; animation-name: none;">
 
         <ul>
             <li><h1>完美的课程曲线成就你</h1></li>
@@ -446,7 +441,7 @@
     </div>
     <!--top-->
 
-    <div class="bottom wow fadeInUp" style="visibility: hidden; animation-name: none;">
+    <div class="bottom wow fadeInUp" style="visibility: visible; animation-name: none;">
 
         <div class="list r1">
 
@@ -531,7 +526,7 @@
 
     <div class="con box or">
         <div class="vs"></div>
-        <div class="wow fadeInLeft fl" data-wow-delay="0s" style="visibility: hidden; animation-delay: 0s; animation-name: none;">
+        <div class="wow fadeInLeft fl" data-wow-delay="0s" style="visibility: visible; animation-delay: 0s; animation-name: none;">
             <ul>
                 <li><h1>天天向上前端特训营</h1></li>
                 <li>学费只有大型机构1/6，更无其他额外费用</li>
@@ -542,7 +537,7 @@
 
         </div>
         <!--txt-->
-        <div class="wow fadeInRight fr" data-wow-delay="0s" style="visibility: hidden; animation-delay: 0s; animation-name: none;">
+        <div class="wow fadeInRight fr" data-wow-delay="0s" style="visibility: visible; animation-delay: 0s; animation-name: none;">
             <ul>
                 <li class="d"><h1>其他培训机构</h1></li>
                 <li>接近3万高额学费及各种额外费用</li>
@@ -560,13 +555,13 @@
 
 
 <div class="kecheng or">
-    <div class="wow fadeInDown top" data-wow-delay="0s" style="visibility: hidden; animation-delay: 0s; animation-name: none;">
+    <div class="wow fadeInDown top" data-wow-delay="0s" style="visibility: visible; animation-delay: 0s; animation-name: none;">
         <h1>前端工程师，互联网新贵职业你造吗？</h1>
         <h3>移动互联网的爆发，前端工程师高薪也一将难求</h3>
     </div>
     <!--top-->
 
-    <div class="con or wow fadeInLeft" style="visibility: hidden; animation-name: none;">
+    <div class="con or wow fadeInLeft" style="visibility: visible; animation-name: none;">
 
 
 
@@ -599,7 +594,7 @@
 
 <div class="xuexi or">
 
-    <div class="wow fadeInDown top" data-wow-delay="0s" style="visibility: hidden; animation-delay: 0s; animation-name: none;">
+    <div class="wow fadeInDown top" style="visibility: visible; animation-delay: 0s; animation-name: none;">
         <h1>与其临渊慕鱼，不如立即加入学习</h1>
         <h3>进步往往就在不经意间，或许就是你的一个决定</h3>
         <h3> <span class="qq">QQ：3351327275 <br>微信：wx3351327275  <br>电话：15623473644
